[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Actors/Player/Skin.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Player/States/Spawn.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Player/States/Move.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Player/States/Idle.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Player/States/Run.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Player/States/Jump.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Player/States/Die.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Player/Player.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Player/States/Air.gd" type="Script" id=10]
[ext_resource path="res://src/Combat/HurtBox.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Actors/Player/States/Stagger.gd" type="Script" id=12]
[ext_resource path="res://src/Combat/Health/Health.tscn" type="PackedScene" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 39, 43 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43, 46 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 0
collision_mask = 3
script = ExtResource( 9 )

[node name="Skin" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Spawn")
animator_path = NodePath("../Skin/AnimationPlayer")
actor_path = NodePath("..")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="StateMachine/Move"]
script = ExtResource( 7 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 10 )

[node name="Stagger" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Duration" type="Timer" parent="StateMachine/Stagger"]
wait_time = 0.5
one_shot = true

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="RespawnTimer" type="Timer" parent="StateMachine/Spawn"]
one_shot = true

[node name="Health" parent="." instance=ExtResource( 13 )]

[node name="BounceRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( -38, 48 )
cast_to = Vector2( 0, 4 )
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 0, 48 )
cast_to = Vector2( 0, 4 )
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D3" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 38, 48 )
cast_to = Vector2( 0, 4 )
collide_with_areas = true
collide_with_bodies = false

[node name="HurtBox" parent="." instance=ExtResource( 11 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[editable path="Skin"]
